fix: fixes scrollbar colors

--- a/src/global/_variables.scss
+++ b/src/global/_variables.scss
@@ -82,8 +82,8 @@ $outline-color: transparent;
 // =================================================
 
 $scrollbar-size: thin;
-$scrollbar-thumb-color: $dark;
-$scrollbar-bg-color: $light;
+$scrollbar-thumb-color: $primary;
+$scrollbar-bg-color: $secondary;
 
 // Containers
 // =================================================
